@@ -5,6 +5,7 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.actuate.observability.AutoConfigureObservability;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.context.annotation.Import;
 import org.springframework.http.HttpMethod;
@@ -14,22 +15,19 @@ import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import org.springframework.web.context.WebApplicationContext;
-import uk.gov.justice.laa.crime.meansassessment.CrimeMeansAssessmentApplication;
+import uk.gov.justice.laa.crime.common.model.meansassessment.ApiMeansAssessmentRequest;
+import uk.gov.justice.laa.crime.common.model.meansassessment.stateless.Assessment;
+import uk.gov.justice.laa.crime.common.model.meansassessment.stateless.StatelessApiRequest;
+import uk.gov.justice.laa.crime.enums.Frequency;
+import uk.gov.justice.laa.crime.enums.meansassessment.AgeRange;
+import uk.gov.justice.laa.crime.enums.meansassessment.IncomeType;
+import uk.gov.justice.laa.crime.enums.meansassessment.OutgoingType;
+import uk.gov.justice.laa.crime.enums.meansassessment.StatelessRequestType;
+import uk.gov.justice.laa.crime.meansassessment.*;
 import uk.gov.justice.laa.crime.meansassessment.builder.MeansAssessmentResponseBuilder;
 import uk.gov.justice.laa.crime.meansassessment.config.CrimeMeansAssessmentTestConfiguration;
 import uk.gov.justice.laa.crime.meansassessment.data.builder.TestModelDataBuilder;
-import uk.gov.justice.laa.crime.meansassessment.model.common.ApiMeansAssessmentRequest;
-import uk.gov.justice.laa.crime.meansassessment.model.common.stateless.Assessment;
-import uk.gov.justice.laa.crime.meansassessment.model.common.stateless.DependantChild;
-import uk.gov.justice.laa.crime.meansassessment.model.common.stateless.StatelessApiRequest;
-import uk.gov.justice.laa.crime.meansassessment.service.stateless.FrequencyAmount;
-import uk.gov.justice.laa.crime.meansassessment.service.stateless.Income;
-import uk.gov.justice.laa.crime.meansassessment.service.stateless.Outgoing;
-import uk.gov.justice.laa.crime.meansassessment.staticdata.enums.Frequency;
-import uk.gov.justice.laa.crime.meansassessment.staticdata.enums.stateless.AgeRange;
-import uk.gov.justice.laa.crime.meansassessment.staticdata.enums.stateless.IncomeType;
-import uk.gov.justice.laa.crime.meansassessment.staticdata.enums.stateless.OutgoingType;
-import uk.gov.justice.laa.crime.meansassessment.staticdata.enums.stateless.StatelessRequestType;
+
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
@@ -47,28 +45,44 @@ import static uk.gov.justice.laa.crime.meansassessment.util.RequestBuilderUtils.
         classes = {
                 CrimeMeansAssessmentApplication.class, MeansAssessmentResponseBuilder.class
         }, webEnvironment = DEFINED_PORT)
+@AutoConfigureObservability
 class StatelessMeansAssessmentIntegrationTest {
     private static final String MEANS_ASSESSMENT_ENDPOINT_URL = "/api/internal/v2/assessment/means";
-
-    private MockMvc mvc;
-
-    @Autowired
-    private WebApplicationContext webApplicationContext;
-
-    @Autowired
-    private FilterChainProxy springSecurityFilterChain;
-
-    @Autowired
-    private ObjectMapper objectMapper;
-
     private static final FrequencyAmount incomeAmount = new FrequencyAmount(Frequency.ANNUALLY, BigDecimal.valueOf(2700));
     private static final FrequencyAmount taxAmount = new FrequencyAmount(Frequency.ANNUALLY, BigDecimal.valueOf(1700));
     private static final FrequencyAmount niAmount = new FrequencyAmount(Frequency.ANNUALLY, BigDecimal.valueOf(1700));
     private static final FrequencyAmount outAmount = new FrequencyAmount(Frequency.ANNUALLY, BigDecimal.valueOf(100));
-
     private static final ApiMeansAssessmentRequest testRequest = TestModelDataBuilder.getApiCreateMeansAssessmentRequest(true);
-    private static final DependantChild childOne = new DependantChild().withAgeRange(AgeRange.ZERO_TO_ONE).withCount(2);
-    private static final DependantChild childTwo = new DependantChild().withAgeRange(AgeRange.FIVE_TO_SEVEN).withCount(1);
+    private static final DependantChild childOne = new DependantChild(AgeRange.ZERO_TO_ONE, 2);
+    private static final DependantChild childTwo = new DependantChild(AgeRange.FIVE_TO_SEVEN, 1);
+    private MockMvc mvc;
+    @Autowired
+    private WebApplicationContext webApplicationContext;
+    @Autowired
+    private FilterChainProxy springSecurityFilterChain;
+    @Autowired
+    private ObjectMapper objectMapper;
+
+    private static Assessment buildAssessment(StatelessRequestType type) {
+        return new Assessment()
+                .withAssessmentDate(LocalDateTime.now())
+                .withAssessmentType(type)
+                .withCaseType(testRequest.getCaseType())
+                .withMagistrateCourtOutcome(testRequest.getMagCourtOutcome())
+                .withHasPartner(false)
+                .withEligibilityCheckRequired(false)
+                .withDependantChildren(Arrays.asList(childOne, childTwo));
+    }
+
+    private static List<Income> buildIncomes() {
+        return Arrays.stream(IncomeType.values())
+                .map(incomeType -> new Income(incomeType, incomeAmount, incomeAmount)).toList();
+    }
+
+    private static List<Outgoing> buildOutgoings() {
+        return Arrays.stream(OutgoingType.values())
+                .map(incomeType -> new Outgoing(incomeType, outAmount, outAmount)).toList();
+    }
 
     @BeforeEach
     void setup() {
@@ -101,33 +115,12 @@ class StatelessMeansAssessmentIntegrationTest {
 
         var request = new StatelessApiRequest()
                 .withAssessment(assessment)
-                .withIncome(Arrays.asList(income))
+                .withIncome(List.of(income))
                 .withOutgoings(Arrays.asList(tax, ni));
 
         String json = objectMapper.writeValueAsString(request);
         mvc.perform(buildRequestGivenContent(HttpMethod.POST, json, MEANS_ASSESSMENT_ENDPOINT_URL))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON));
-    }
-
-    private static Assessment buildAssessment(StatelessRequestType type) {
-        return new Assessment()
-                .withAssessmentDate(LocalDateTime.now())
-                .withAssessmentType(type)
-                .withCaseType(testRequest.getCaseType())
-                .withMagistrateCourtOutcome(testRequest.getMagCourtOutcome())
-                .withHasPartner(false)
-                .withEligibilityCheckRequired(false)
-                .withDependantChildren(Arrays.asList(childOne, childTwo));
-    }
-
-    private static List<Income> buildIncomes() {
-        return Arrays.stream(IncomeType.values())
-                .map(incomeType -> new Income(incomeType, incomeAmount, incomeAmount)).toList();
-    }
-
-    private static List<Outgoing> buildOutgoings() {
-        return Arrays.stream(OutgoingType.values())
-                .map(incomeType -> new Outgoing(incomeType, outAmount, outAmount)).toList();
     }
 }
